# dataset-iMaterialist

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
imaterialist/: sample_annotations.py  transforms.py
imaterialist/cli/: make_category_id_starts_from_1.py  rle2png.py
notebook/: EDA.ipynb
raw/: classes.txt  palette.txt
scripts/: download.sh  make_category_id_starts_from_1.sh  setup_tiny.sh
tests/: test_make_category_id_starts_from_1.py
tiny/: classes.txt  label_descriptions.json  palette.txt
