[tool.poetry]
name = "imaterialist"
version = "0.1.0"
description = ""
authors = ["hrsma2i <hrs.ma2i@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kaggle = "^1.5.12"

[tool.poetry.dev-dependencies]
numpy = "^1.20.1"
pandas = "^1.2.3"
matplotlib = "^3.3.4"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
